Remove outdated Java development guidelines for JDK 21 LTS, consolidating best practices, architectural shifts, and performance standards into a more streamlined document.