@@ -1,276 +1,249 @@
 ---
-description: 'JDK 25 additions to java-core guidelines: unnamed variables, primitive patterns, Stream Gatherers, Structured Concurrency, Scoped Values, and stable preview features'
+description: 'JDK 25 LTS addendum to java.instructions.md — covers only stable features introduced between JDK 22 and JDK 25. Apply together with java.instructions.md.'
 applyTo: '**/*.java'
 ---
 
-# Java Core — JDK 25 Additions
+# Java JDK 25 LTS — Addendum
 
-> **Prerequisite**: This file **extends** `java-core.instructions.md`. All rules from that file still apply.
-> Use this file only when the project build explicitly targets JDK 25:
-> - Maven: `<java.version>25</java.version>`
-> - Gradle: `sourceCompatibility = JavaVersion.VERSION_25`
-
-> **Conflict Resolution**: Project build config → Sonar/Checkstyle → This file → `java-core.instructions.md`
+> **How to use this file**
+> This file is a **complement** to `java.instructions.md`, which covers the JDK 21 LTS baseline.
+> Do not repeat JDK 21 patterns here. Only apply rules from this file when the project build explicitly targets JDK 25 (`<java.version>25</java.version>` in Maven or `sourceCompatibility = JavaVersion.VERSION_25` in Gradle).
+>
+> **Preview in JDK 25 — do not use in production:** Structured Concurrency (JEP 505), Primitive Types in Patterns (JEP 507), Stable Values (JEP 502), PEM Encodings (JEP 470).
 
 ---
 
-## New Stable Features in JDK 25
+## JDK 25 Stable Feature Baseline
+
+Features **finalized** in JDK 25 that are safe to use in production:
 
 | Feature | JEP | Notes |
 | :--- | :--- | :--- |
-| Unnamed Variables & Patterns (`_`) | JEP 456 | Stable since JDK 22 |
-| Stream Gatherers (`Stream.gather()`) | JEP 485 | Stable since JDK 24 |
-| Structured Concurrency | JEP 505 | Stable in JDK 25 |
-| Scoped Values | JEP 506 | Stable in JDK 25 |
-| Primitive Patterns in `switch` | JEP 488 | Stable in JDK 25 |
-| Unnamed Classes & Instance Main | JEP 512 | Stable in JDK 25 — scripts/tooling only |
-| Flexible Constructor Bodies | JEP 513 | Stable in JDK 25 |
+| Unnamed Variables & Patterns | JEP 456 | Finalized in JDK 22 |
+| Scoped Values | JEP 506 | Replaces `ThreadLocal` for immutable context |
+| Module Import Declarations | JEP 511 | `import module java.base;` |
+| Compact Source Files & Instance Main | JEP 512 | Simplified entry points |
+| Flexible Constructor Bodies | JEP 513 | Statements before `super()`/`this()` |
+| Key Derivation Function API | JEP 510 | `javax.crypto.KDF` |
+| Compact Object Headers | JEP 519 | JVM flag `-XX:+UseCompactObjectHeaders` |
+| Generational Shenandoah GC | JEP 521 | `-XX:+UseShenandoahGC` |
+| AOT Command-Line Ergonomics | JEP 514 | `-XX:AOTCache=app.aot` |
+| AOT Method Profiling | JEP 515 | Profile-guided JIT warmup |
 
 ---
 
-## Unnamed Variables (`_`)
+## Unnamed Variables and Patterns (`_`)
 
-Use `_` to explicitly mark unused bindings in patterns, catch blocks, and lambdas.
-This signals intent to the reader and eliminates "variable declared but never used" Sonar warnings.
+Use `_` to explicitly discard unused variables in patterns, catch blocks, and lambda parameters. This signals intent and eliminates "variable declared but never used" warnings.
 
 ```java
-// Good: unused catch parameter
+// Good: Unused catch parameter
 try {
-    Integer.parseInt(input);
+    return Integer.parseInt(input);
 } catch (NumberFormatException _) {
     return 0;
 }
 
-// Good: unused pattern component in record deconstruction
-if (result instanceof Result.Ok(var value, _)) {
-    return value;
-}
-
-// Good: unused lambda parameter
+// Good: Unused lambda parameter
 list.forEach(_ -> counter.increment());
 
-// Good: ignoring fields in switch arms
-return switch (payment) {
-    case CreditCard(var number, _)   -> processCredit(number);
-    case PayPal(var email)           -> processDigital(email);
-};
-```
-
-**Rules:**
-- Use `_` only for variables that are **intentionally irrelevant** to the logic.
-- Never use `_` as a shortcut to avoid naming something that actually matters.
-- For JDK 21 targets, use an explicit name like `ignored` or `unused` instead.
-
----
-
-## Primitive Patterns in `switch`
-
-Dispatch directly over primitives in `switch` expressions without boxing. This eliminates `Integer`/`Long` wrapper allocations in type-dispatch logic.
-
-```java
-// Good: primitive pattern dispatch — no boxing
-double fee = switch (statusCode) {
-    case 200      -> 0.0;
-    case 404      -> FLAT_FEE;
-    case int code when code >= 500 -> PENALTY_FEE;
-    default       -> DEFAULT_FEE;
-};
-
-// Avoid (JDK 21 style): boxing to Integer for switch
-Integer boxed = statusCode; // unnecessary allocation
-```
-
-**Rules:**
-- Use guarded patterns (`when`) for range conditions instead of nested `if` inside switch arms.
-- Combine with sealed type patterns when mixing primitive and object dispatch.
-
----
-
-## Stream Gatherers (`Stream.gather()`)
-
-Use `Stream.gather()` for **stateful or complex intermediate operations** that cannot be expressed with existing stream operations (`map`, `filter`, `flatMap`). This keeps complex transformations inside a declarative pipeline instead of breaking into an imperative loop.
-
-Built-in gatherers available via `java.util.stream.Gatherers`:
-
-| Gatherer | Description |
-| :--- | :--- |
-| `Gatherers.windowFixed(n)` | Splits stream into fixed-size, non-overlapping windows |
-| `Gatherers.windowSliding(n)` | Produces overlapping sliding windows |
-| `Gatherers.scan(init, fn)` | Running accumulation (like `reduce` but emits each step) |
-| `Gatherers.fold(init, fn)` | Like `reduce` but as an intermediate operation |
-| `Gatherers.mapConcurrent(n, fn)` | Concurrent mapping with parallelism bound |
-
-```java
-// Good: fixed windows — process items in batches of 3
-List<List<Order>> batches = orders.stream()
-    .gather(Gatherers.windowFixed(3))
-    .toList();
-
-// Good: running total using scan
-List<BigDecimal> runningTotals = amounts.stream()
-    .gather(Gatherers.scan(BigDecimal.ZERO, BigDecimal::add))
-    .toList();
-
-// Good: custom gatherer for "take while increasing"
-Gatherer<Integer, ?, Integer> takeWhileIncreasing = Gatherer.ofSequential(
-    () -> new int[]{Integer.MIN_VALUE},
-    (state, element, downstream) -> {
-        if (element <= state[0]) return false;
-        state[0] = element;
-        return downstream.push(element);
-    }
-);
-
-List<Integer> ascending = numbers.stream()
-    .gather(takeWhileIncreasing)
-    .toList();
-
-// Avoid: breaking pipeline into imperative loop for stateful logic
-List<List<Order>> batches = new ArrayList<>();
-List<Order> current = new ArrayList<>();
-for (Order o : orders) {
-    current.add(o);
-    if (current.size() == 3) {
-        batches.add(List.copyOf(current));
-        current.clear();
-    }
+// Good: Partial deconstruction — only 'name' is needed
+if (event instanceof UserEvent(var name, _, _)) {
+    log.info("User event for: {}", name);
 }
 ```
 
-**Rules:**
-- Prefer built-in `Gatherers.*` before writing custom ones.
-- Custom gatherers must be **stateless across items** unless state is explicitly encapsulated in the state supplier.
-- Do not use `Gatherers.mapConcurrent` inside transactions or when ordering must be preserved.
+- Use `_` only when the variable is **genuinely** unused — not as a shortcut for lazy naming.
+- For JDK 21 targets, replace `_` with a named variable (e.g., `ignored`, `unused`).
 
 ---
 
-## Structured Concurrency
+## Scoped Values (JEP 506)
 
-Use `StructuredTaskScope` to run concurrent subtasks with clear parent-child lifecycle management. The parent scope **always waits for all children** before proceeding, eliminating thread leaks and dangling tasks.
+Use `ScopedValue` to share **immutable, bounded context** within a thread and its children. Prefer it over `ThreadLocal` for new code, especially alongside virtual threads.
 
-```java
-// Good: structured scope — both tasks scoped to the method's lifetime
-try (var scope = new StructuredTaskScope.ShutdownOnFailure()) {
+**When to use `ScopedValue` over `ThreadLocal`:**
 
-    Subtask<UserProfile> profile  = scope.fork(() -> userService.fetchProfile(userId));
-    Subtask<List<Order>> orders   = scope.fork(() -> orderService.fetchOrders(userId));
-
-    scope.join()           // wait for both
-         .throwIfFailed(); // propagate first failure as exception
-
-    return new Dashboard(profile.get(), orders.get());
-}
-
-// Good: return first successful result, cancel the rest
-try (var scope = new StructuredTaskScope.ShutdownOnSuccess<Config>()) {
-
-    scope.fork(() -> loadFromDatabase());
-    scope.fork(() -> loadFromRemote());
-
-    scope.join();
-    return scope.result(); // first to succeed wins
-}
-
-// Avoid: unscoped CompletableFuture — tasks outlive the calling method
-CompletableFuture<UserProfile> profile = CompletableFuture.supplyAsync(() -> fetchProfile(id));
-CompletableFuture<List<Order>> orders  = CompletableFuture.supplyAsync(() -> fetchOrders(id));
-// If fetchOrders throws, fetchProfile keeps running in the background — resource leak
-```
-
-**Rules:**
-- Always use try-with-resources for `StructuredTaskScope` — it is `AutoCloseable`.
-- Use `ShutdownOnFailure` when **all subtasks must succeed** (fan-out/fan-in).
-- Use `ShutdownOnSuccess` when you need **the first successful result** (hedged requests, fallbacks).
-- Never share mutable state between forked subtasks — pass immutable records or value objects.
-- Do not call `scope.fork()` after `scope.join()` — tasks must be registered before joining.
-
----
-
-## Scoped Values
-
-Use `ScopedValue` to share immutable, bounded context across a call tree without passing parameters through every method. This replaces `ThreadLocal` for request-scoped data in virtual thread environments.
-
-```java
-// Declaration: one static constant per piece of context
-public static final ScopedValue<RequestContext> REQUEST_CTX = ScopedValue.newInstance();
-
-// Good: bind value for the duration of a specific call tree
-ScopedValue.where(REQUEST_CTX, new RequestContext(userId, traceId))
-    .run(() -> orderService.placeOrder(cart));
-
-// Good: read from any method in the call tree — no parameter threading needed
-public void placeOrder(Cart cart) {
-    var ctx = REQUEST_CTX.get(); // always present within the bound scope
-    auditLog.record(ctx.userId(), "ORDER_PLACED");
-}
-
-// Avoid: ThreadLocal — inheritable by child threads, mutable, leaks context
-static final ThreadLocal<RequestContext> REQUEST_CTX = new ThreadLocal<>();
-REQUEST_CTX.set(ctx);    // easy to forget cleanup
-REQUEST_CTX.remove();    // manual cleanup — skipped if an exception is thrown
-```
-
-**Rules:**
-- Declare `ScopedValue` constants as `public static final` — one per logical piece of context.
-- Never mutate the value inside the scope — it is read-only within the bound call tree.
-- Use `ScopedValue.where(...).call(...)` when the operation returns a value; `.run(...)` for void.
-- Do not use `ScopedValue` as a general-purpose global — limit to genuinely cross-cutting context (tracing, auth, locale).
-
----
-
-## Flexible Constructor Bodies
-
-In JDK 25, constructors can execute statements **before** the `super()` or `this()` call, as long as they do not access `this`. This enables validation before delegation without static helper methods.
-
-```java
-// Good: validate before delegating to super — no static helper needed
-public class PositiveAmount extends Amount {
-    public PositiveAmount(BigDecimal value) {
-        if (value.signum() <= 0)                         // runs before super()
-            throw new IllegalArgumentException("Must be positive: " + value);
-        super(value.setScale(2, RoundingMode.HALF_UP));  // delegation after validation
-    }
-}
-
-// Avoid (JDK 21 workaround): static helper to work around the restriction
-public class PositiveAmount extends Amount {
-    public PositiveAmount(BigDecimal value) {
-        super(validate(value)); // only way to run logic before super() in JDK 21
-    }
-    private static BigDecimal validate(BigDecimal v) {
-        if (v.signum() <= 0) throw new IllegalArgumentException("Must be positive: " + v);
-        return v.setScale(2, RoundingMode.HALF_UP);
-    }
-}
-```
-
-**Rules:**
-- Statements before `super()`/`this()` must not read or write instance fields (`this` is not yet initialized).
-- Use this feature for **validation and transformation of constructor arguments only**.
-- Prefer `record` compact constructors for value objects — this feature is mainly useful for class hierarchies.
-
----
-
-## Naming Additions for JDK 25
-
-Extends the naming table in `java-core.instructions.md`:
-
-| Identifier | Style | Guidance |
+| Concern | `ThreadLocal` | `ScopedValue` |
 | :--- | :--- | :--- |
-| Unnamed variable | `_` | Intentionally unused binding in pattern, catch, or lambda |
-| `ScopedValue` constant | `UPPER_SNAKE_CASE` | `REQUEST_CTX`, `CURRENT_USER`, `TRACE_ID` |
-| `StructuredTaskScope` variable | `lowerCamelCase` | `scope`, named by operation: `fetchScope`, `raceScope` |
-| Custom `Gatherer` | `lowerCamelCase` | Named by transformation: `takeWhileIncreasing`, `windowByKey` |
+| Mutability | Mutable | Immutable |
+| Lifetime | Entire thread lifetime (risk of leaks) | Bounded to `where()`/`run()` scope |
+| Virtual Thread safety | Risky (inherited by child threads) | Safe — explicitly scoped |
+| Readable intent | Unclear | Self-documenting scope |
+
+```java
+// Good: Scoped value for request context
+public class RequestContext {
+    public static final ScopedValue<User> CURRENT_USER = ScopedValue.newInstance();
+
+    public void handle(User user, Runnable task) {
+        ScopedValue.where(CURRENT_USER, user).run(task);
+    }
+}
+
+// Access anywhere within the scope — no parameter threading
+class AuditService {
+    void audit(String action) {
+        var user = RequestContext.CURRENT_USER.get(); // throws if not bound
+        log.info("Action '{}' by {}", action, user.id());
+    }
+}
+```
+
+- Use `ScopedValue.orElse(default)` when the value may not be bound.
+- Do **not** use `ScopedValue` as a general-purpose mutable state store — it is immutable by design.
+- `ThreadLocal` remains valid for mutable, thread-local accumulation (e.g., formatters, parsers).
 
 ---
 
-## Common Smells Added in JDK 25
+## Flexible Constructor Bodies (JEP 513)
 
-| Smell | JDK 25 Cure |
+Statements that do not reference `this` may now appear **before** `super()` or `this()` in a constructor. Use this to compute and validate arguments before delegating to a superclass, without static helper methods.
+
+```java
+// Before JDK 25: required a static helper to validate before super()
+public class PositiveInteger extends Number {
+    public PositiveInteger(int value) {
+        super(validate(value)); // static helper needed
+    }
+    private static int validate(int v) {
+        if (v <= 0) throw new IllegalArgumentException("Must be positive");
+        return v;
+    }
+}
+
+// JDK 25: statements before super() are now valid
+public class PositiveInteger extends Number {
+    public PositiveInteger(int value) {
+        if (value <= 0) throw new IllegalArgumentException("Must be positive");
+        super(value); // explicit super() now allowed after statements
+    }
+}
+```
+
+- Statements before `super()`/`this()` **cannot** reference `this` or instance fields.
+- This is not a license to add complex logic before delegation — keep pre-super blocks focused on validation and argument transformation.
+
+---
+
+## Module Import Declarations (JEP 511)
+
+Use `import module <name>;` to import all packages exported by a module in a single declaration. This is particularly useful when working heavily with a module's API.
+
+```java
+// Before JDK 25: individual imports
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
+
+// JDK 25: import the entire module
+import module java.base;
+```
+
+- Use module imports to reduce boilerplate in files that use many types from one module.
+- Resolve **ambiguous types** explicitly: if two modules export the same class name, qualify it fully (e.g., `java.util.Date` vs `java.sql.Date`).
+- Module imports do **not** require `module-info.java` in the importing code.
+
+---
+
+## Compact Source Files & Instance Main (JEP 512)
+
+For scripts, utilities, and single-class programs, omit the class declaration and `public static` boilerplate. The file is compiled as an unnamed class.
+
+```java
+// JDK 25: valid top-level program — no class wrapper needed
+void main() {
+    System.out.println("Hello from JDK 25");
+}
+```
+
+- Use this **only** for scripts, tooling, and exploratory code — never in production application source trees.
+- Do not apply to `@SpringBootApplication`, service classes, or anything that needs to be part of a module or package.
+
+---
+
+## Key Derivation Function API (JEP 510)
+
+Use `javax.crypto.KDF` for deriving cryptographic keys from a shared secret. Prefer KDF over manual `SecretKeyFactory` chains for protocols like TLS key expansion, password hashing workflows, and post-quantum schemes.
+
+```java
+// Good: Derive a key using HKDF
+KDF kdf = KDF.getInstance("HKDF-SHA256");
+SecretKey derived = kdf.deriveKey("AES",
+    KDFParameters.ofHkdf(inputKeyMaterial, salt, info, 32));
+```
+
+- Never implement custom key derivation logic — use `KDF` or established libraries (Bouncy Castle).
+- Store only derived keys, never raw secrets.
+- Validate the algorithm name against [JCA Standard Names](https://docs.oracle.com/en/java/docs/api/java.base/javax/crypto/KDF.html).
+
+---
+
+## Performance: JVM and GC Updates
+
+### Compact Object Headers (JEP 519)
+
+Reduces object header size from 96–128 bits to 64 bits on 64-bit JVMs. This decreases heap usage and improves GC throughput for workloads with many small objects.
+
+- Enable with `-XX:+UseCompactObjectHeaders` (opt-in in JDK 25).
+- Avoid relying on `System.identityHashCode()` for identity-sensitive caches when this flag is active — identity hash behavior is preserved, but the internal layout changes.
+
+### Generational Shenandoah GC (JEP 521)
+
+Shenandoah now supports generational collection, aligning it with G1 and ZGC. Use it as a low-pause alternative to ZGC for workloads where pause predictability is critical.
+
+```
+# Enable Generational Shenandoah
+-XX:+UseShenandoahGC
+```
+
+**GC selection guide for JDK 25:**
+
+| GC | Use case |
 | :--- | :--- |
-| Named but unused catch variable | Use `_`: `catch (Exception _)` |
-| `ThreadLocal` for request context | Replace with `ScopedValue` |
-| `CompletableFuture` fan-out without lifecycle | Replace with `StructuredTaskScope.ShutdownOnFailure` |
-| Imperative stateful loop breaking a stream | Replace with `Stream.gather()` + built-in `Gatherers` |
-| Static helper before `super()` call | Use flexible constructor body (validate before `super()`) |
-| Boxing in primitive `switch` dispatch | Use primitive patterns directly in `switch` |
+| G1GC (default) | General-purpose, balanced throughput/latency |
+| ZGC Generational | Very large heaps, ultra-low latency requirement |
+| Shenandoah Generational | Predictable pause times, mid-to-large heaps |
+
+### AOT Cache (JEP 514 + JEP 515)
+
+Dramatically reduces startup time by persisting class-loading and JIT method profiles across runs.
+
+```bash
+# Step 1: Run with cache output enabled
+java -XX:AOTCacheOutput=app.aot -cp app.jar com.example.Main
+
+# Step 2: Subsequent runs use the cache
+java -XX:AOTCache=app.aot -cp app.jar com.example.Main
+```
+
+- Use AOT caching in containerized or serverless deployments where cold-start latency matters.
+- Regenerate the cache after each deployment — the cache is tied to the specific JAR and JVM version.
+- AOT caching is distinct from GraalVM native image; it still runs on the standard HotSpot JVM.
+
+---
+
+## Build and Verification
+
+| Build Tool | JDK 25 Configuration |
+| :--- | :--- |
+| Maven | `<java.version>25</java.version>` |
+| Gradle | `sourceCompatibility = JavaVersion.VERSION_25` |
+
+- Preview features require `--enable-preview` at both compile and runtime — never enable in production without explicit team sign-off.
+- Verify the project compiles cleanly without `--enable-preview` before enabling any preview feature.
+
+---
+
+## Additional Resources
+
+- [JDK 25 Release Notes](https://openjdk.org/projects/jdk/25/)
+- [JEP 456 — Unnamed Variables & Patterns](https://openjdk.org/jeps/456)
+- [JEP 506 — Scoped Values](https://openjdk.org/jeps/506)
+- [JEP 511 — Module Import Declarations](https://openjdk.org/jeps/511)
+- [JEP 512 — Compact Source Files and Instance Main Methods](https://openjdk.org/jeps/512)
+- [JEP 513 — Flexible Constructor Bodies](https://openjdk.org/jeps/513)
+- [JEP 510 — Key Derivation Function API](https://openjdk.org/jeps/510)
+- [JEP 519 — Compact Object Headers](https://openjdk.org/jeps/519)
+- [JEP 521 — Generational Shenandoah](https://openjdk.org/jeps/521)
+- [JEP 514 — AOT Command-Line Ergonomics](https://openjdk.org/jeps/514)
